--- a/index.html
+++ b/index.html
@@ -10,5 +10,42 @@
 </head>
 <body>
   <h1>Moyo header</h1>
+
+  <header class="logo header-box">
+    <nav>
+      <ul class="margin-right">
+        <li>
+          <a class="links is-active" href="">apple</a>
+        </li>
+        <li>
+          <a class="links" href="">samsung</a>
+        </li>
+        <li>
+          <a class="links" href="">смартфоны и телефоны</a>
+        </li>
+        <li>
+          <a
+            data-qa="hover"
+            class="links"
+            href=""
+          >
+            ноутбуки и компьютеры
+          </a>
+        </li>
+        <li>
+          <a class="links" href="">гаджеты</a>
+        </li>
+        <li>
+          <a class="links" href="">пленшеты</a>
+        </li>
+        <li>
+          <a class="links" href="">фото</a>
+        </li>
+        <li>
+          <a class="links" href="">видео</a>
+        </li>
+      </ul>
+    </nav>
+  </header>
 </body>
 </html>
