Somethink wrong with font

--- a/index.html
+++ b/index.html
@@ -9,8 +9,6 @@
   <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-  <h1>Moyo header</h1>
-
   <header class="logo header-box">
     <nav>
       <ul class="margin-right">
@@ -36,7 +34,7 @@
           <a class="links" href="">гаджеты</a>
         </li>
         <li>
-          <a class="links" href="">пленшеты</a>
+          <a class="links" href="">планшеты</a>
         </li>
         <li>
           <a class="links" href="">фото</a>
