--- a/index.html
+++ b/index.html
@@ -10,18 +10,19 @@
 </head>
 <body>
   <header class="logo header-box">
+    <div></div>
     <nav>
-      <ul class="margin-right">
-        <li>
+      <ul class="link-ul">
+        <li class="links-li">
           <a class="links is-active" href="">apple</a>
         </li>
-        <li>
+        <li class="links-li">
           <a class="links" href="">samsung</a>
         </li>
-        <li>
+        <li class="links-li">
           <a class="links" href="">смартфоны и телефоны</a>
         </li>
-        <li>
+        <li class="links-li">
           <a
             data-qa="hover"
             class="links"
@@ -30,16 +31,16 @@
             ноутбуки и компьютеры
           </a>
         </li>
-        <li>
+        <li class="links-li">
           <a class="links" href="">гаджеты</a>
         </li>
-        <li>
+        <li class="links-li">
           <a class="links" href="">планшеты</a>
         </li>
-        <li>
+        <li class="links-li">
           <a class="links" href="">фото</a>
         </li>
-        <li>
+        <li class="links-li">
           <a class="links" href="">видео</a>
         </li>
       </ul>
